GNOME Bugzilla – Bug 662839
gtk: Fix XIGrabKeycode usage
Last modified: 2011-10-28 11:05:41 UTC
As mentioned by Peter in: https://bugzilla.gnome.org/show_bug.cgi?id=340720
Created attachment 200086 [details] [review] gtk: Fix XIGrabKeycode usage A modifier of "0" is still a modifier and must be submitted normally. A num_modifiers of 0 is essentially a noop in the server. As mentioned by Peter Hutterer <peter.hutterer@who-t.net>
Review of attachment 200086 [details] [review]: Note that the same code is around for both grab and ungrab. Make sure to fix them both
Done, for both grab and ungrab, not sure how I missed that having read the code before. commit 0888e6f4854507600bdb72fe2eea65496be98407 Author: Bastien Nocera <hadess@hadess.net> Date: Thu Oct 27 11:09:26 2011 +0100 gtk: Fix XIGrabKeycode usage A modifier of "0" is still a modifier and must be submitted normally. A num_modifiers of 0 is essentially a noop in the server. As mentioned by Peter Hutterer <peter.hutterer@who-t.net> https://bugzilla.gnome.org/show_bug.cgi?id=662839